--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,68 @@
 absl-py==2.1.0
+aiohappyeyeballs==2.4.3
+aiohttp==3.10.10
+aiohttp-cors==0.7.0
+aiosignal==1.3.1
+annotated-types==0.7.0
+asttokens==2.4.1
+attrs==24.2.0
+cachetools==5.5.0
 certifi==2024.8.30
 charset-normalizer==3.3.2
+click==8.1.7
 cloudpickle==3.0.0
+colorful==0.5.6
+comm==0.2.2
 contourpy==1.3.0
 cycler==0.12.1
+debugpy==1.8.7
+decorator==5.1.1
 deepdiff==8.0.1
+distlib==0.3.9
+dm-tree==0.1.8
+executing==2.1.0
 Farama-Notifications==0.0.4
 filelock==3.16.1
 fonttools==4.54.1
+frozenlist==1.4.1
 fsspec==2024.9.0
+google-api-core==2.21.0
+google-auth==2.35.0
+googleapis-common-protos==1.65.0
 Grid2Op==1.10.3
 grpcio==1.66.2
-gymnasium==0.29.1
+gymnasium==0.28.1
 idna==3.10
+imageio==2.36.0
+ipykernel==6.29.5
+ipython==8.28.0
+jax-jumpy==1.0.0
+jedi==0.19.1
 Jinja2==3.1.4
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+jupyter_client==8.6.3
+jupyter_core==5.7.2
 kiwisolver==1.4.7
+lazy_loader==0.4
 LightSim2Grid==0.9.1
+linkify-it-py==2.0.3
+llvmlite==0.43.0
+lz4==4.3.3
 Markdown==3.7
+markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 matplotlib==3.9.2
+matplotlib-inline==0.1.7
+mdit-py-plugins==0.4.2
+mdurl==0.1.2
+memray==1.14.0
 mpmath==1.3.0
+msgpack==1.1.0
+multidict==6.1.0
+nest-asyncio==1.6.0
 networkx==3.3
+numba==0.60.0
 numpy==1.26.4
 nvidia-cublas-cu12==12.1.3.1
 nvidia-cuda-cupti-cu12==12.1.105
@@ -34,27 +76,70 @@ nvidia-cusparse-cu12==12.1.0.106
 nvidia-nccl-cu12==2.20.5
 nvidia-nvjitlink-cu12==12.6.77
 nvidia-nvtx-cu12==12.1.105
+opencensus==0.11.4
+opencensus-context==0.1.3
 orderly-set==5.2.2
 packaging==24.1
 pandapower==2.14.11
 pandas==2.2.3
+parso==0.8.4
+pexpect==4.9.0
 pillow==10.4.0
+platformdirs==4.3.6
+prometheus_client==0.21.0
+prompt_toolkit==3.0.48
+propcache==0.2.0
+proto-plus==1.24.0
 protobuf==5.28.2
+psutil==6.1.0
+ptyprocess==0.7.0
+pure_eval==0.2.3
+py-spy==0.3.14
+pyarrow==17.0.0
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
 pybind11==2.13.6
+pydantic==2.9.2
+pydantic_core==2.23.4
+Pygments==2.18.0
 pyparsing==3.1.4
 python-dateutil==2.9.0.post0
 pytz==2024.2
+PyYAML==6.0.2
+pyzmq==26.2.0
+ray==2.37.0
+referencing==0.35.1
 requests==2.32.3
+rich==13.9.2
+rpds-py==0.20.0
+rsa==4.9
+scikit-image==0.24.0
 scipy==1.13.1
+setuptools==75.1.0
+shellingham==1.5.4
 six==1.16.0
+smart-open==7.0.5
 stable_baselines3==2.3.2
+stack-data==0.6.3
 sympy==1.13.3
 tensorboard==2.18.0
 tensorboard-data-server==0.7.2
+tensorboardX==2.6.2.2
+textual==0.83.0
+tifffile==2024.9.20
 torch==2.4.1
+torch-tb-profiler==0.4.3
+tornado==6.4.1
 tqdm==4.66.5
+traitlets==5.14.3
 triton==3.0.0
+typer==0.12.5
 typing_extensions==4.12.2
 tzdata==2024.2
+uc-micro-py==1.0.3
 urllib3==2.2.3
+virtualenv==20.27.0
+wcwidth==0.2.13
 Werkzeug==3.0.4
+wrapt==1.16.0
+yarl==1.15.5
